--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <h1>Mozilla is cool</h1>
     <img src="images/firefox-icon.png" alt="Firefox logo: a flaming fox surrounding the Earth." width="200" >
     <p>Read <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> for more...</p>
+    <br> first: 0
+    <br> second: 0
+    <br>
     <script src="scripts/main.js"></script>
     </body>
 </html>
