--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Read <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> for more...</p>
     <script src="scripts/main.js"></script>
     <!-- NB! Set method="post" or method="get" in form. -->
-    <form action="submitFormAK" method="get" enctype="text/plain">
+    <form action="submitFormAK" method="post" enctype="text/plain">
       First name:
       <br />
       <input type="text" name="fname">
