--- a/app.html
+++ b/app.html
@@ -1,13 +1,13 @@
 <html>
   <body>
-      <form action="submitTest" method="post" enctype="text/plain">
-        First name:
+      <form action="submitFormAK-Ini" method="post" enctype="text/plain">
+        User Id:
         <br />
-        <input type="text" name="fname">
+        <input type="text" name="userId">
         <br />
-        Last name:
+        Password:
         <br />
-        <input type="text" name="sname">
+        <input type="text" name="passWord">
         <br />
         <input type="submit">
       </form>
