--- a/app.html
+++ b/app.html
@@ -1,15 +1,29 @@
+<!DOCTYPE html>
 <html>
-  <body>
-      <form action="submitFormAK-Ini" method="post" enctype="text/plain">
-        User Id:
-        <br />
-        <input type="text" name="userId">
-        <br />
-        Password:
-        <br />
-        <input type="text" name="passWord">
-        <br />
-        <input type="submit">
-      </form>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>User Audit Page</title>
+  <style>
+    body {
+    width: 200px;
+    margin: 200px auto;
+    padding: 0 20px 20px 20px;
+    border: 5px solid black;
+    }
+  </style>
+</head>
+<body>
+  <form action="submitFormAK-Ini" method="post" enctype="text/plain">
+    User Id:
+    <br />
+    <input type="text" name="userId">
+    <br />
+    Password:
+    <br />
+    <input type="text" name="passWord">
+    <br />
+    <br />
+    <input type="submit">
+  </form>
+</body>
 </html>
