--- a/pages/index.html
+++ b/pages/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>User INFO page</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   </head>
@@ -11,7 +11,7 @@
     <img src="images/firefox-icon.png" alt="Firefox logo: a flaming fox surrounding the Earth." width="200" >
     <p>Read <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> for more...</p>
     <script src="scripts/main.js"></script>
-    <!-- NB! Set method="post" or method="get" in form. -->
+    <!-- NB!!! Set method="post" or method="get" in form. -->
     <form action="submitFormAK" method="post" enctype="text/plain">
       First name:
       <br />
