--- a/app.html
+++ b/app.html
@@ -20,7 +20,7 @@
     <br />
     Password:
     <br />
-    <input type="text" name="passWord">
+    <input type="password" name="passWord">
     <br />
     <br />
     <input type="submit">
