--- a/app.html
+++ b/app.html
@@ -23,7 +23,7 @@
     <input type="password" name="passWord">
     <br />
     <br />
-    <input type="submit">
+    <input type="submit" value="Authorize yourserf">
   </form>
 </body>
 </html>
